--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,5 @@
 <div id=container class="container">
-    <h4 class='mt-4'>Contact</h3>
+    <h3 style="margin-top: 60px;" class='mb-3'>Contact</h3>
     <div id="contact">
         <form id=contact onsubmit="return false">
             <table class="table">
@@ -8,7 +8,8 @@
                         <label for="name">Full Name</label>
                     </td>
                     <td>
-                        <input type="text" name="name" id="name" placeholder="First and Last" class=form-control-sm>
+                        <input type="text" data-test="name" name="name" id="name" placeholder="First and Last"
+                            class=form-control-sm>
                     </td>
                 </tr>
                 <tr>
@@ -16,7 +17,7 @@
                         <label for="email">Email Address</label>
                     </td>
                     <td>
-                        <input type="email" name="email" id="email" placeholder="email@domain.tld"
+                        <input data-test="email" type="email" name="email" id="email" placeholder="email@domain.tld"
                             class=form-control-sm>
                     </td>
                 </tr>
@@ -25,13 +26,13 @@
                         <label for="message">Comments</label>
                     </td>
                     <td>
-                        <textarea rows="3" class=form-control-sm name="message" id="message"
+                        <textarea data-test="msg" rows="3" class=form-control-sm name="message" id="message"
                             placeholder="message"></textarea>
                     </td>
                 </tr>
             </table>
             <input type=submit id="send1" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mymodal"
-                value="submit" />
+                value="submit" data-test="btn"/>
 
             <button id="reset" class="btn btn-primary" style="margin-left: 10px;">Reset</button>
         </form>
