--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,19 @@
 <div id=container class="container">
-  <h4 class='mt-4'>My website with serverless examples</h4>
+  <h4 data-test=header class='mb-4 text-4xl' style="margin-top: 70px;">Tiko's website with serverless Api examples and
+    Cypress</h4>
+  <h6>Glad you're here</h6>
+  <!-- <div class="relative mb-1">
+    <dt>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+        aria-hidden="true" class="absolute h-1 w-1 text-blue-500">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"></path>
+      </svg>
+      <p class="ml-9 text-lg font-medium leading-6 text-gray-500">3 Apis</p>
+    </dt>
+    <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
+  </div> -->
 
-  <div id="example1">
-    <h5 class='mt-4'>Example 1: Fetch a Joke</h5>
-    <button class='mt-3 btn btn-primary' id="fetch-joke">Fetch</button>
-    <p id="resjoke" class="mt-3">..joke is waiting</p>
-  </div>
-  <div id="example2">
-    <h5 class='mt-5'>Example 2: Fetch stock data - Result is probably in dollars</h5>
-    <h6 class="mt-3">Symbols - Companies:</h6>
-    <div id=symbols class="mt-2"></div>
-    <input id=symbol class="mt-3" placeholder="Enter symbol, eg. ibm">
-    <button class='ms-3 btn btn-primary' id="fetch-stock">Fetch</button>
-
-    <p id="resstock" class="mt-3">..stock data waits</p>
-  </div>
+  <div id="apis"></div>
 
   <div id="git_code">
     <h5>Github Links</h5>
