started-to-integrate-tik-repo--installed-node-fetch3-for-experimental-to-work

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,23 @@
 <div id=container class="container">
+  <div id="topnav"></div>
   <h4 data-test=header class='mb-4 text-4xl' style="margin-top: 70px;">Tiko's website with serverless Api examples and
     Cypress</h4>
   <h6>Glad you're here</h6>
-  <!-- <div class="relative mb-1">
+
+
+  <div id="apis"></div>
+
+  <div id="git_code">
+    <h5>Github Links</h5>
+  </div>
+  <div id="bottomnav"></div>
+</div>
+<script src="src.js"></script>
+<script src="table.js"></script>
+<script src="api.js"></script>
+<link rel="stylesheet" href="nav.min.css">
+
+<!-- <div class="relative mb-1">
     <dt>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
         aria-hidden="true" class="absolute h-1 w-1 text-blue-500">
@@ -12,13 +27,3 @@
     </dt>
     <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
   </div> -->
-
-  <div id="apis"></div>
-
-  <div id="git_code">
-    <h5>Github Links</h5>
-  </div>
-
-  <script src="src.js"></script>
-  <script src="api.js"></script>
-</div>
