--- a/public/contact.html
+++ b/public/contact.html
@@ -1,15 +1,35 @@
+<div class="modal fade" id="mymodal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="modal-title"></h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-content"></div>
+            <div class="modal-footer" id="modal-footer">
+                <input type="submit" id=send2 class="btn btn-primary" value="send" />
+                <button id="final-close" style="display: none" class="btn btn-primary">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div id=container class="container">
-    <h3 style="margin-top: 60px;" class='mb-3'>Contact</h3>
+    <div class="nav" id="topnav">
+        <a href="/" class="active">Home</a>
+    </div>
     <div id="contact">
-        <form id=contact onsubmit="return false">
+        <h5 class=mt-5>Contact</h5>
+        <form id=contact accept-charset="utf-8" onsubmit="return false">
+
             <table class="table">
                 <tr>
                     <td>
                         <label for="name">Full Name</label>
                     </td>
                     <td>
-                        <input type="text" data-test="name" name="name" id="name" placeholder="First and Last"
-                            class=form-control-sm>
+                        <input type="text" name="name" id="name" placeholder="First and Last" class=form-control-sm>
                     </td>
                 </tr>
                 <tr>
@@ -17,7 +37,7 @@
                         <label for="email">Email Address</label>
                     </td>
                     <td>
-                        <input data-test="email" type="email" name="email" id="email" placeholder="email@domain.tld"
+                        <input type="email" name="email" id="email" placeholder="email@domain.tld"
                             class=form-control-sm>
                     </td>
                 </tr>
@@ -26,13 +46,13 @@
                         <label for="message">Comments</label>
                     </td>
                     <td>
-                        <textarea data-test="msg" rows="3" class=form-control-sm name="message" id="message"
+                        <textarea rows="3" class=form-control-sm name="message" id="message"
                             placeholder="message"></textarea>
                     </td>
                 </tr>
             </table>
             <input type=submit id="send1" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mymodal"
-                value="submit" data-test="btn"/>
+                value="submit" />
 
             <button id="reset" class="btn btn-primary" style="margin-left: 10px;">Reset</button>
         </form>
@@ -40,6 +60,8 @@
     <div id="git_code">
         <h5>Github Links</h5>
     </div>
+    <div id="bottomnav" class="nav"></div>
 </div>
 
 <script src="src.js"></script>
+<link rel="stylesheet" href="nav.min.css">
