cloud-accounts-included-as-first-move

--- a/public/contact.html
+++ b/public/contact.html
@@ -20,7 +20,7 @@
         <a href="/" class="active">Home</a>
     </div>
     <div id="contact">
-        <h5 class=mt-5>Contact</h5>
+        <h3 class=mb-5 style="margin-top: 70px;">Contact</h3>
         <form id=contact accept-charset="utf-8" onsubmit="return false">
 
             <table class="table">
