--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h4 data-test=header class='mb-4 text-4xl' style="margin-top: 70px;">Tiko's website with serverless Api examples and
-    Cypress</h4>
-  <h6>Glad you're here</h6>
+  <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's website with serverless Api examples and
+    Cypress</h3>
+  <h6>I move text for a living</h6>
 
+  <div id="cloud" class='mt-4'>
+    <h5 class="mb-4">Cloud Accounts</h5>
+  </div>
 
   <div id="apis"></div>
 
@@ -15,6 +18,7 @@
 <script src="src.js"></script>
 <script src="table.js"></script>
 <script src="api.js"></script>
+<script src="cloud.js"></script>
 <link rel="stylesheet" href="nav.min.css">
 
 <!-- <div class="relative mb-1">
