posts-moved-from-tik-to-here-and-absolute-path-used-with-path.resolve

--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,16 @@
     Cypress</h3>
   <h6>I move text for a living</h6>
 
-  <div id="cloud" class='mt-4'>
-    <h5 class="mb-4">Cloud Accounts</h5>
-  </div>
+  <div id="cloud" class='mt-4'>  </div>
 
   <div id="apis"></div>
 
   <div id="git_code">
-    <h5>Github Links</h5>
+    <h5>Links</h5>
   </div>
   <div id="bottomnav"></div>
 </div>
-<script src="src.js"></script>
-<script src="table.js"></script>
-<script src="api.js"></script>
-<script src="cloud.js"></script>
+<script src="src.min.js"></script>
 <link rel="stylesheet" href="nav.min.css">
 
 <!-- <div class="relative mb-1">
