sys-included--mongo-db-included--rapid-still-no-fix

--- a/public/contact.html
+++ b/public/contact.html
@@ -58,10 +58,10 @@
         </form>
     </div>
     <div id="git_code">
-        <h5>Github Links</h5>
+        <h5>Links</h5>
     </div>
     <div id="bottomnav" class="nav"></div>
 </div>
 
-<script src="src.js"></script>
-<link rel="stylesheet" href="nav.min.css">
+<script src="client.min.js"></script>
+<script src="contact.min.js"></script>
