--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,18 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's website with serverless Api examples and
-    Cypress</h3>
-  <h6>I move text for a living</h6>
+  <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
+  <h6>moving numbers + text for a living</h6>
 
-  <div id="cloud" class='mt-4'>  </div>
-
+  <div id="cloud" class='mt-4'> </div>
+  <div id="sys" class='mt-4'> </div>
   <div id="apis"></div>
-
   <div id="git_code">
     <h5>Links</h5>
   </div>
   <div id="bottomnav"></div>
 </div>
-<script src="src.min.js"></script>
-<link rel="stylesheet" href="nav.min.css">
+<script src="client.min.js"></script>
+<script src="index.min.js"></script>
 
 <!-- <div class="relative mb-1">
     <dt>
