--- a/public/contact.html
+++ b/public/contact.html
@@ -57,6 +57,12 @@
             <button id="reset" class="btn btn-primary" style="margin-left: 10px;">Reset</button>
         </form>
     </div>
+    <div id="newsletter">
+        <h5 class="mt-5">Get newsletter</h5>
+        <input type="email" name="email" id="email" placeholder="email@domain.tld">
+        <button id="news" class="btn btn-primary" style="margin-left: 10px;">Get News</button>
+
+    </div>
     <div id="git_code">
         <h5>Links</h5>
     </div>
