remove-functions-listdir--remove-fetch-json--only-rapid-testing

--- a/public/contact.html
+++ b/public/contact.html
@@ -59,8 +59,8 @@
     </div>
     <div id="newsletter">
         <h5 class="mt-5">Get newsletter</h5>
-        <input type="email" name="email" id="email" placeholder="email@domain.tld">
-        <button id="news" class="btn btn-primary" style="margin-left: 10px;">Get News</button>
+        <input type="email" name="email" id="email" placeholder="subscribe for update" data-test="nl-input">
+        <button id="news" class="btn btn-primary" style="margin-left: 10px;" data-test="nl-btn">Get News</button>
 
     </div>
     <div id="git_code">
@@ -71,3 +71,4 @@
 
 <script src="client.min.js"></script>
 <script src="contact.min.js"></script>
+<link href="css/nav.min.css" rel="stylesheet">
