rapid-api-convert-to-axios--static-files-with-change-in-netlify.toml--newsletter-field-btn-with-test--mongo-simple-find-from-cli

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,21 +1,21 @@
-<div class="modal fade" id="mymodal" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 id="modal-title"></h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modal-content"></div>
-            <div class="modal-footer" id="modal-footer">
-                <input type="submit" id=send2 class="btn btn-primary" value="send" />
-                <button id="final-close" style="display: none" class="btn btn-primary">Close</button>
+<div id=container class="container">
+    <div class="modal fade" id="mymodal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 id="modal-title" data-test="success-msg"></h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal-content"></div>
+                <div class="modal-footer" id="modal-footer">
+                    <input type="submit" id=mail_btn class="btn btn-primary send-btn" value="send" />
+                    <button id="final-close" style="display: none" class="btn btn-primary">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div id=container class="container">
     <div class="nav" id="topnav">
         <a href="/" class="active">Home</a>
     </div>
@@ -59,9 +59,10 @@
     </div>
     <div id="newsletter">
         <h5 class="mt-5">Get newsletter</h5>
-        <input type="email" name="email" id="email" placeholder="subscribe for update" data-test="nl-input">
-        <button id="news" class="btn btn-primary" style="margin-left: 10px;" data-test="nl-btn">Get News</button>
-
+        <input type="email" name="email" id="nl-input" placeholder="subscribe for update" data-test="nl-input">
+        <button id="news_btn" class="btn btn-primary send-btn" data-bs-target="#mymodal" data-bs-toggle="modal"
+            style="margin-left: 10px;" data-test="nl-btn">Get News</button>
+        <div id="success-nl"></div>
     </div>
     <div id="git_code">
         <h5>Links</h5>
