--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
 </div>
 <script src="client.min.js"></script>
 <script src="index.min.js"></script>
-<script src="js/api.min.js"></script>
+<!-- <script src="js/api.min.js"></script>
 <script src="js/cloud.min.js"></script>
 <script src="js/jstable.min.js"></script>
 <script src="js/sys.min.js"></script>
-<script src="js/table.min.js"></script>
-<link href="css/jstable.min.css" rel="stylesheet">
-<link href="css/nav.min.css" rel="stylesheet">
+<script src="js/table.min.js"></script> -->
+<!-- <link href="css/jstable.min.css" rel="stylesheet"> -->
+<!-- <link href="css/nav.min.css" rel="stylesheet"> -->
 
 
 <!-- <div class="relative mb-1">
