--- a/public/contact.html
+++ b/public/contact.html
@@ -10,12 +10,13 @@
                 </div>
                 <div class="modal-body" id="modal-content"></div>
                 <div class="modal-footer" id="modal-footer">
-                    <input type="submit" id=mail_btn class="btn btn-primary send-btn" value="send" />
-                    <button id="final-close" style="display: none" class="btn btn-primary">Close</button>
+                    <input type="submit" id=mail_btn class="btn btn-primary send_btn" value="send" />
+                    <button id="final_close" style="display: none" class="btn btn-primary"
+                        data-bs-dismiss=modal>Close</button>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="nav" id="topnav">
         <a href="/" class="active">Home</a>
     </div>
@@ -70,6 +71,7 @@
     <div id="bottomnav" class="nav"></div>
 </div>
 
-<script src="client.min.js"></script>
-<script src="contact.min.js"></script>
-<link href="css/nav.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/js/bootstrap.min.js"></script>
+<script src="client.js"></script>
+<script src="contact.js"></script>
+<link href="css/nav.css" rel="stylesheet">
