--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,26 @@
   <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
   <h6>moving numbers + text for a living</h6>
 
-  <div id="cloud" class='mt-4'> </div>
-  <div id="sys" class='mt-4'> </div>
+  <div id="cloud"> </div>
+  <div id="sys"> </div>
   <div id="apis"></div>
   <div id="git_code">
     <h5>Links</h5>
   </div>
   <div id="bottomnav"></div>
 </div>
-<script src="client.min.js"></script>
-<script src="index.min.js"></script>
-<!-- <script src="js/api.min.js"></script>
-<script src="js/cloud.min.js"></script>
-<script src="js/jstable.min.js"></script>
-<script src="js/sys.min.js"></script>
-<script src="js/table.min.js"></script> -->
-<!-- <link href="css/jstable.min.css" rel="stylesheet"> -->
-<!-- <link href="css/nav.min.css" rel="stylesheet"> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/js/bootstrap.min.js"></script>
+<script src="client.js"></script>
+<script src="index.js"></script>
+<script src="js/api.js"></script>
+<script src="js/cloud.js"></script>
+<script src="js/jstable.js"></script>
+<script src="js/sys.js"></script>
+<script src="js/table.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+
+<link href="css/jstable.css" rel="stylesheet">
+<link href="css/nav.css" rel="stylesheet">
 
 
 <!-- <div class="relative mb-1">
