jokes-working-rm-eventlistener-from-loop--mail-now-works-json.parse-included--geodata-included--graphql-included-for-github-links--issues-links-to-gh-work

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
   <h6>moving numbers + text for a living</h6>
 
+  <div id="client"> </div>
   <div id="cloud"> </div>
   <div id="sys"> </div>
   <div id="apis"></div>
@@ -16,6 +17,7 @@
 <script src="index.js"></script>
 <script src="js/api.js"></script>
 <script src="js/cloud.js"></script>
+<script src="js/geo.js"></script>
 <script src="js/jstable.js"></script>
 <script src="js/sys.js"></script>
 <script src="js/table.js"></script>
