repos-still-from-mongo-tobe-changed-to-graphql--test-geo-write-to-mongo-other-pc-missing

--- a/public/imprint.html
+++ b/public/imprint.html
@@ -1,4 +1,4 @@
-<h2><a href="index.html">home</a></h2>
+<h2><a href="/public/index.html">home</a></h2>
 <h3>Declaration of Data Protection Policy</h3>
 <p>General info</p>
 <p>The following information will present an overview of what happens with your personal data while visiting my
@@ -11,10 +11,8 @@ page.</p>
 <p>How do I collect data?</p>
 <p>I collect data when you send it to me.
 This is done by entering your data in the contact form.</p>
-<p>Further data may be automatically collected in the future when visiting my site.
-It is technical data that I may collect (browser type, operating system, origin, Time of visit).
-This collection may be done automatic as soon as you call the website.</p>
-<p>I use your data to present the contents and to analyse the consumption of my site.</p>
+<p>Further data is technical data (browser type, operating system, origin, Time of visit, Ip Address).</p>
+<p>I use your data to improve the content and to analyse the consumption of my site.</p>
 <p>Responsible for the website:</p>
 <p>Timo Körner</p>
 <p>Hepberg, Germany</p>
