--- a/public/test.html
+++ b/public/test.html
@@ -1,10 +1,4 @@
 <div id="topnav"></div>
 
-<script>
-    function recordData(data) {
-        console.log(data.ip, data.country)
-    }
-</script>
-<script src="https://ipinfo.io/json?callback=recordData"></script>
 
-<!-- <script src="test.js"></script> -->
+<script src="js/transcript.js"></script>
