convert-from-html-include-js-files-to-js-script--from-get-element-by-to-createelem

--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,19 @@
   <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
   <h6>moving numbers + text for a living</h6>
 
-  <div id="client"> </div>
-  <div id="cloud"> </div>
-  <div id="sys"> </div>
-  <div id="apis"></div>
+  <!-- <div id="client"> </div> -->
+  <!-- <div id="cloud"> </div> -->
+  <!-- <div id="sys"> </div> -->
+  <!-- <div id="apis"></div> -->
   <div id="git_code">
     <h5>Links</h5>
   </div>
   <div id="bottomnav"></div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/js/bootstrap.min.js"></script>
 <script src="client.js"></script>
 <script src="index.js"></script>
-<script src="js/api.js"></script>
-<script src="js/cloud.js"></script>
-<script src="js/geo.js"></script>
-<script src="js/jstable.js"></script>
-<script src="js/sys.js"></script>
-<script src="js/table.js"></script>
-
-<link href="css/jstable.css" rel="stylesheet">
-<link href="css/nav.css" rel="stylesheet">
+<script src="js/convert.js"></script>
+<script src="js/api.min.js"></script>
 
 
 <!-- <div class="relative mb-1">
