--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,15 @@
 <div id=container class="container">
   <div id="topnav"></div>
   <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
-  <h6>moving numbers + text for a living</h6>
+  <h6>That IT guy from next door</h6>
 
-  <!-- <div id="client"> </div> -->
-  <!-- <div id="cloud"> </div> -->
-  <!-- <div id="sys"> </div> -->
-  <!-- <div id="apis"></div> -->
-  <div id="git_code">
-    <h5>Links</h5>
-  </div>
+  <!-- <div id="git_code"> -->
+  <!-- <h5>Links</h5> -->
+  <!-- </div> -->
   <div id="bottomnav"></div>
 </div>
 <script src="client.js"></script>
 <script src="index.js"></script>
-<script src="js/convert.js"></script>
-<script src="js/api.min.js"></script>
 
 
 <!-- <div class="relative mb-1">
