added-convert-cm-feet-with-test--rename-geo-to-clientjs--moved-table-js-out-of-js-folder-and-inside-html-as-script-tag

--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
         <a href="/" class="active">Home</a>
     </div>
     <div id="contact">
-        <h3 class=mb-5 style="margin-top: 70px;">Contact</h3>
+        <h3 class=mb-4>Contact</h3>
         <form id=contact accept-charset="utf-8" onsubmit="return false" novalidate>
 
             <table class="table">
@@ -47,12 +47,8 @@
         <button id="news_btn" class="btn btn-primary send_btn" data-bs-target="#mymodal" data-bs-toggle="modal"
             style="margin-left: 10px;" data-test="nl_btn">Get News</button>
     </div>
-    <div id="git_code">
-        <h5>Links</h5>
-    </div>
     <div id="bottomnav" class="nav"></div>
 </div>
 
 <script src="client.js"></script>
 <script src="contact.js"></script>
-<link href="css/nav.css" rel="stylesheet">
