--- a/public/imprint.html
+++ b/public/imprint.html
@@ -1,11 +1,18 @@
-<h2><a href="/public/index.html">home</a></h2>
-<h3>Declaration of Data Protection Policy</h3>
+<!-- <head> -->
+<!-- <title>Tiko's</title> -->
+<!-- </head> -->
+<div class=container id=container>
+<div id=topnav>
+        <a href="/" class="active">Home</a>
+</div>
+<div data-test=imprint>
+<h5>Declaration of Data Protection Policy</h5>
 <p>General info</p>
 <p>The following information will present an overview of what happens with your personal data while visiting my
 page.</p>
 <p>Personal data is all data which can be used for identity of yourself.</p>
 <p>You get further information regarding data protection in the declaration that follows.</p>
-<h3>Who is Responsible for the Data acquisition on this website?</h3>
+<h5>Who is Responsible for the Data acquisition on this website?</h5>
 <p>The data processing will be realized by the content owner of this site.</p>
 <p>My contact data is shown further down, contact is possible with a form on this website.</p>
 <p>How do I collect data?</p>
@@ -16,3 +23,6 @@ This is done by entering your data in the contact form.</p>
 <p>Responsible for the website:</p>
 <p>Timo Körner</p>
 <p>Hepberg, Germany</p>
+<div id=bottomnav></div>
+</div></div>
+<script src=client.js></script>
