--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3 data-test=header class='mb-4' style="margin-top: 70px;">Tiko's serverless and Cypress</h3>
+  <h3 data-test=header class='mb-4'>Tiko's serverless and Cypress</h3>
   <h6>That IT guy from next door</h6>
 
-  <!-- <div id="git_code"> -->
-  <!-- <h5>Links</h5> -->
-  <!-- </div> -->
   <div id="bottomnav"></div>
 </div>
+<script src="table.js"></script>
 <script src="client.js"></script>
 <script src="index.js"></script>
 
