tik2-9-heroku-netlify-similar-except-express-and-functions-tech-stack--moved-to-ts-on-server

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3 data-test=header class='mb-4'>Tiko's serverless and Cypress</h3>
-  <h6>That IT guy from next door</h6>
-
+  <h3>That Functions guy</h3>
   <div id="bottomnav"></div>
 </div>
 <script src="table.js"></script>
