--- a/public/imprint.html
+++ b/public/imprint.html
@@ -1,6 +1,3 @@
-<!-- <head> -->
-<!-- <title>Tiko's</title> -->
-<!-- </head> -->
 <div class=container id=container>
 <div id=topnav>
         <a href="/" class="active">Home</a>
@@ -14,15 +11,20 @@ page.</p>
 <p>You get further information regarding data protection in the declaration that follows.</p>
 <h5>Who is Responsible for the Data acquisition on this website?</h5>
 <p>The data processing will be realized by the content owner of this site.</p>
-<p>My contact data is shown further down, contact is possible with a form on this website.</p>
 <p>How do I collect data?</p>
-<p>I collect data when you send it to me.
-This is done by entering your data in the contact form.</p>
-<p>Further data is technical data (browser type, operating system, origin, Time of visit, Ip Address).</p>
+<p>Collected data is technical data:</p>
+<ul>
+<li>browser type</li>
+<li>operating system</li>
+<li>origin</li>
+<li>Time of visit</li>
+<li>Ip Address</li>
+</ul>
 <p>I use your data to improve the content and to analyse the consumption of my site.</p>
 <p>Responsible for the website:</p>
 <p>Timo Körner</p>
 <p>Hepberg, Germany</p>
+<p>Phone Number and Email please find on the contact page.</p>
 <div id=bottomnav></div>
 </div></div>
 <script src=client.js></script>
