--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3>Hi there, it is Timo! Apis and data I find worthwhile writing about as a JS frontend guy</h3>
+  <h3>Hi there, it is Timo!</h3>
+  <h4> Apis and data I find worthwhile writing about as a JS programmer</h4>
   <div id="bottomnav"></div>
 </div>
 <script src="table.js"></script>
