--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,22 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3>Hi, it is Timo</h3>
-  <h4> Apis and data worth writing about</h4>
+  <h3>It is Timo</h3>
+  <h4> Apis worth writing about</h4>
   <div id="bottomnav"></div>
 </div>
+
+<div class="relative mb-1">
+  <dt>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+      aria-hidden="true" class="absolute h-1 w-1 text-blue-500">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"></path>
+    </svg>
+    <p class="ml-9 text-lg font-medium leading-6 text-gray-500">3 Apis</p>
+  </dt>
+  <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
+</div>
+
 <script src="table.js"></script>
 <script src="client.js"></script>
+<script src="js/api.js"></script>
 <script src="index.js"></script>
-
-
-<!-- <div class="relative mb-1">
-    <dt>
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-        aria-hidden="true" class="absolute h-1 w-1 text-blue-500">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"></path>
-      </svg>
-      <p class="ml-9 text-lg font-medium leading-6 text-gray-500">3 Apis</p>
-    </dt>
-    <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
-  </div> -->
