issues-and-apis--no-index-because-it-does-not-work-remote-issue#5

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,33 @@
 <div id=container class="container">
   <div id="topnav"></div>
-  <h3>It is Timo</h3>
+  <h2 style="font-size: 5rem;
+  color:green;
+  filter: url(#shadow);">It is Timo</h2>
+  <svg xmlns="http://www.w3.org/2000/svg" class="filter">
+    <defs>
+      <filter id="shadow">
+        <feTurbulence type="turbulence" baseFrequency="0.2" numOctaves="100" result="turbulence" />
+        <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="50" xChannelSelector="R" yChannelSelector="G"
+          result="grainyShadow1" />
+        <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="50" xChannelSelector="R" yChannelSelector="G"
+          result="grainyShadow2" />
+        <feColorMatrix in="grainyShadow1" result="colorCorrected1" type="matrix" values="1 0 0 -1 0
+                     0 0 0 -1 0
+                     0 0 0 -1 0
+                     0 0 0 1 0" />
+        <feColorMatrix in="grainyShadow2" result="colorCorrected2" type="matrix" values="1 0 0 -1 0
+        0 0 0 -1 0
+        0 0 0 -1 0
+        0 0 0 1 0" />
+        <feMerge>
+          <feMergeNode in="colorCorrected1" />
+          <feMergeNode in="colorCorrected2" />
+          <feMergeNode in="SourceGraphic" />
+        </feMerge>
+      </filter>
+    </defs>
+  </svg>
+
   <h4> Apis worth writing about</h4>
   <div id="bottomnav"></div>
 </div>
@@ -18,5 +45,5 @@
 
 <script src="table.js"></script>
 <script src="client.js"></script>
-<script src="js/api.js"></script>
+<!-- <script src="js/api.js"></script> -->
 <script src="index.js"></script>
