--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,13 @@
   <div id="bottomnav"></div>
 </div>
 
+   <!-- <div class=button>
+        <h2 class=tab>Ein rollender Ball</h2>
+        <p><i class="fas fa-volleyball-ball rollIn animated"></i></p>
+    </div> -->
+<code
+  data-anijs="if: click, on: .tab, do: $removeClass active, to: .tab.active; if: click, on: .tab, do: $addClass active, to: target"></code>
+
 <div class="relative mb-1">
   <dt>
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
