cors-header-added-to-sys-function

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,7 @@
         <h2 class=tab>Ein rollender Ball</h2>
         <p><i class="fas fa-volleyball-ball rollIn animated"></i></p>
     </div> -->
-<code
-  data-anijs="if: click, on: .tab, do: $removeClass active, to: .tab.active; if: click, on: .tab, do: $addClass active, to: target"></code>
+<!-- <code data-anijs="if: click, on: .tab, do: $removeClass active, to: .tab.active; if: click, on: .tab, do: $addClass active, to: target"></code> -->
 
 <div class="relative mb-1">
   <dt>
@@ -45,11 +44,12 @@
       aria-hidden="true" class="absolute h-1 w-1 text-blue-500">
       <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"></path>
     </svg>
-    <p class="ml-9 text-lg font-medium leading-6 text-gray-500">3 Apis</p>
+    <!-- <p class="ml-9 text-lg font-medium leading-6 text-gray-500">3 Apis</p> -->
   </dt>
   <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
 </div>
 
+<link href="css/style.css" rel="stylesheet">
 <script src="table.js"></script>
 <script src="client.js"></script>
 <!-- <script src="js/api.js"></script> -->
