--- a/public/contact.html
+++ b/public/contact.html
@@ -92,6 +92,8 @@
 <div id="bottomnav"></div>
 </div>
 <script src="client.js"></script>
+<link href="css/style.css" rel="stylesheet">
+
         
         
     </body>
