--- a/public/imprint.html
+++ b/public/imprint.html
@@ -105,6 +105,7 @@ This is done by entering your data in the contact form.</p>
 <div id=bottomnav></div>
 </div>
 <script src=client.js></script>
+<link href="css/style.css" rel="stylesheet">
 
         
         
