type-added-to-posts--changed-from-axios-to-fetch-because-axios-makes-problems--not-working-with-graphql

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
 
 <link href="css/style.css" rel="stylesheet">
 <script src="table.js"></script>
+<!-- <script src="js/cloud.js"></script> -->
 <script src="client.js"></script>
 <script src="index.js"></script>
