utils-function-used-for-truncate-and-sorting-of-array-of-objects-and-objects--access-from-tiapps-and-tik-to-mongo-and-utils-functions

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <div id="topnav"></div>
   <h2 style="font-size: 5rem;
   color:green;
-  filter: url(#shadow);">It is Timo</h2>
+  filter: url(#shadow);">Tiko's</h2>
   <svg xmlns="http://www.w3.org/2000/svg" class="filter">
     <defs>
       <filter id="shadow">
