first-commit-new-year-websites--repos-and-posts-removed-commits-added

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
 </div>
 
 <link href="css/style.css" rel="stylesheet">
+<link href="css/jstable.css" rel="stylesheet">
 <script src="table.js"></script>
-<!-- <script src="js/cloud.js"></script> -->
 <script src="client.js"></script>
+<script src="jstable.js"></script>
 <script src="index.js"></script>
