website-data-for-teaching-now-from-json-and-not-from-mongo--public-client-folder-now-shows-github-repos

--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,15 @@
     </defs>
   </svg>
 
-  <h4>Random thoughts</h4>
+  <h4>About my programming in Nodejs</h4>
+  <div id="cloud"></div>
   <div id="bottomnav"></div>
 </div>
 
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
+<script src="js/cloud.js"></script>
 <script src="table.js"></script>
+<script src="index.js"></script>
 <script src="client.js"></script>
 <script src="jstable.js"></script>
-<script src="index.js"></script>
