--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,16 @@
 <html>
 
-<head>
-
-</head>
-
 <body>
 
   <div id=container class="container">
-    <div id="topnav"></div>
-    <h2 style="font-size: 5rem;
-  color:green;
-  filter: url(#shadow);">Tiko's</h2>
-    <svg xmlns="http://www.w3.org/2000/svg" class="filter">
-      <defs>
-        <filter id="shadow">
-          <feTurbulence type="turbulence" baseFrequency="0.2" numOctaves="100" result="turbulence" />
-          <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="50" xChannelSelector="R" yChannelSelector="G"
-            result="grainyShadow1" />
-          <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="50" xChannelSelector="R" yChannelSelector="G"
-            result="grainyShadow2" />
-          <feColorMatrix in="grainyShadow1" result="colorCorrected1" type="matrix" values="1 0 0 -1 0
-                     0 0 0 -1 0
-                     0 0 0 -1 0
-                     0 0 0 1 0" />
-          <feColorMatrix in="grainyShadow2" result="colorCorrected2" type="matrix" values="1 0 0 -1 0
-        0 0 0 -1 0
-        0 0 0 -1 0
-        0 0 0 1 0" />
-          <feMerge>
-            <feMergeNode in="colorCorrected1" />
-            <feMergeNode in="colorCorrected2" />
-            <feMergeNode in="SourceGraphic" />
-          </feMerge>
-        </filter>
-      </defs>
-    </svg>
+    <div id="topnav">
+      <a href="/" class="active">Home</a>
 
-    <h4>my programming world</h4>
+    </div>
+
+    <h4 style="padding-top: 50px;">My programming world</h4>
     <div id="cloud"></div>
+    <div id="yellowtail">Timo Körner</div>
     <div id="bottomnav"></div>
   </div>
 </body>
