--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,10 @@
-<html>
-
-<body>
-
-  <div id=container class="container">
-    <div id="topnav">
-      <a href="/" class="active">Home</a>
-
-    </div>
-
-    <h4 style="padding-top: 50px;">My programming world</h4>
-    <div id="cloud"></div>
-    <div id="yellowtail">Timo Körner</div>
-    <div id="bottomnav"></div>
-  </div>
+<div id="container">
+  <h4>Timo's programming world</h4>
+  <div id="cloud"></div>
+  <div id="yellowtail">Timo Körner</div>
+</div>
+<div id="bottomnav"></div>
+</div>
 </body>
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
