flatten-function-added-for-graphql-github-call-with-nested-obj-array

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <div id="container">
-  <h4>Timo's programming world</h4>
+  <h4>Tiko's playground</h4>
   <div id="cloud"></div>
   <div id="yellowtail">Timo Körner</div>
 </div>
